Plataforma--se creo el link que informa como subir eventos | SubeTuEvento--se creo el html y el css . Se ingreso la información.

--- a/index.html
+++ b/index.html
@@ -34,18 +34,16 @@
   <link rel="icon" type="image/png" href="images/icon.png"/>
   <!--Icon Font-->
   <link href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet"/>
+  <!--Roboto Font-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet"/>
   <!--Normalize-->
   <link href="css/normalize.css" rel="stylesheet"/>
   <!--Agora Style-->
   <link rel="stylesheet" href="css/agora-style.css"/>
-  <!--Style modal-->
-  <link rel="stylesheet" href="css/agora-modal.css"/>
-  <!--Agora FrameWork-->
-  <link rel="stylesheet" href="css/agora-frameWork.css"/>
   <!--Agora Media Queris-->
   <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
 </head>
-<body>
+<body id="inicio">
   <!--Barra de Navegación-->
   <nav class="menuNavegacionVertical">
     <div class="menuNavegacion__home"><a href="index.html"><i class="icon-a icono--menu"></i></a></div>
@@ -58,14 +56,17 @@
         <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
       </ul>
     </div>
-    <div class="menuNavegacionVertical__back"><a href="#inicio"><i class="icon-back icono--back"></i></a></div>
+    <div class="menuNavegacionVertical__alfa"><a href="agora_landing.html"><i class="icon-alfa icono--menu"></i></a></div>
   </nav>
   <nav class="menuNavegacionApaisado">
     <div><i class="icon-a"></i></div>
-    <div><i class="icon-menu"></i></div>
+    <div><i class="icon-menu icono--menu"></i></div>
   </nav>
   <!--Modal -->
   <div class="modalTarjetas"></div>
+  <!--Banner-->
+  <div class="banner__enviaTuEvento flexRow"><a class="banner__enviaTuEvento--texto" href="subeTuEvento.html">Conoce como subir tu Evento +</a></div>
+  <!--Back--><a class="back flexRow" href="#inicio"><i class="icon-back icono--menu"></i></a>
   <!--Contenedor Tarjetas-->
   <div class="contenedorTarjetasEventos">
     <div class="columnaTarjetas">
