Modal--se realizaron actualizaciones

--- a/modal.html
+++ b/modal.html
@@ -29,7 +29,7 @@
   //////////////////////////////////////////////////////
   
   -->
-  <title>ágora | Descubre el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; crea el espacio para el evento que organizas y que todos lo vean</title>
+  <title>ágora | Modal</title>
   <!--Icono Pestaña-->
   <link rel="icon" type="image/png" href="images/icon.png"/>
   <!--Icon Font-->
@@ -38,8 +38,6 @@
   <link href="css/normalize.css" rel="stylesheet"/>
   <!--Style modal-->
   <link rel="stylesheet" href="css/agora-modal.css"/>
-  <!--Agora FrameWork-->
-  <link rel="stylesheet" href="css/agora-frameWork.css"/>
   <!--Agora Media Queris-->
 </head>
 <body>
@@ -60,7 +58,11 @@
       </div>
       <div class="redesSociales__modal"><a class="tooltip-top" href="" data-tooltip="Tooltip Facebook"><i class="icon-facebook icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Twitter"><i class="icon-twitter icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Instagram"><i class="icon-instagram icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Teléfono"><i class="icon-telefono icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Dirección"><i class="icon-direccion icono-modal"></i></a></div>
     </div>
-    <div class="cerrar"><a href="index.html">x</a></div>
+    <div class="cerrar"><a href="index.html"><i class="icon-cerrar"></i></a></div>
+    <div class="menu__imagenes">
+      <div class="compartir"><i class="icon-compartir"></i></div>
+      <div><i class="anterior icon-anterior"></i><i class="siguiente icon-siguiente"></i></div>
+    </div>
   </div>
-  <div class="fond"><img class="imagen_fondo" src="images/1.jpg"/></div>
+  <div class="fondoignorar"><img class="imagen_fondo" src="images/1.jpg"/></div>
 </body>
