--- a/agora_landing.html
+++ b/agora_landing.html
@@ -29,7 +29,7 @@
   //////////////////////////////////////////////////////
   
   -->
-  <title>ágora | Descubre el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; crea el espacio para el evento que organizas y que todos lo vean</title>
+  <title>ágora | Landing Page</title>
   <!--Icono Pestaña-->
   <link rel="icon" type="image/png" href="images/icon.png"/>
   <!--Icon Font-->
