Modal--se ingreso el código jQuery y html para que funcionara

--- a/modal.html
+++ b/modal.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="contenedor__modal">
-    <div class="imagenEvento__modal"><img class="cartel__modal" src="images/5.jpg"/></div>
+    <div class="imagenEvento__modal"><img class="cartel__modal imagen-fluida" src="images/5.jpg"/></div>
     <div class="informacionEvento__modal">
       <p class="tipoEvento__modal">Feria</p>
       <p class="nombreEvento__modal">Feria Nacional del Libro Infantil y Juvenil 2017</p>
@@ -58,11 +58,9 @@
       </div>
       <div class="redesSociales__modal"><a class="tooltip-top" href="" data-tooltip="Tooltip Facebook"><i class="icon-facebook icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Twitter"><i class="icon-twitter icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Instagram"><i class="icon-instagram icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Teléfono"><i class="icon-telefono icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Dirección"><i class="icon-direccion icono-modal"></i></a></div>
     </div>
-    <div class="cerrar"><a href="index.html"><i class="icon-cerrar"></i></a></div>
     <div class="menu__imagenes">
       <div class="compartir"><i class="icon-compartir"></i></div>
       <div><i class="anterior icon-anterior"></i><i class="siguiente icon-siguiente"></i></div>
     </div>
   </div>
-  <div class="fondoignorar"><img class="imagen_fondo" src="images/1.jpg"/></div>
 </body>
