LandingPage--se modifico el estilo de la sección Equipo utilizando layout Grid convirtiendolo en responsivo

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -34,15 +34,15 @@
   <link rel="icon" type="image/png" href="images/icon.png"/>
   <!--Icon Font-->
   <link href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet"/>
-  <!--Normalize-->
+  <!--Normalize---->
   <link href="css/normalize.css" rel="stylesheet"/>
-  <!--Landing Page-->
+  <!--Landing Page---->
   <link rel="stylesheet" href="css/agora-landingPage.css"/>
   <!--Landing Page-->
   <link rel="stylesheet" href="css/agora-style.css"/>
   <!--Framework Agora-->
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
-  <!--Agora Media Queris-->
+  <!--Agora Media Queris---->
   <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
   <!--Agora Media Queris-->
   <link rel="stylesheet" href="css/grid.css"/>
@@ -167,10 +167,8 @@
     <div class="equipo__tarjetas">
       <div class="jose equipo__perfil">
         <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
-        <div class="informacion__integrante">
-          <h3 class="nombre__integrante"><span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
-          <p class="descripcion__integrante">Reseña</p>
-        </div>
+        <h3 class="nombre__integrante"><span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
+        <p class="descripcion__integrante">Reseña</p>
         <div class="tags__integrante">
           <div class="tag">CSS</div>
           <div class="tag">Data Base</div>
@@ -200,6 +198,7 @@
           <div class="tag">Prototyping</div>
           <div class="tag">UI Desing</div>
         </div>
+        <div class="redesSociales__integrante">F & T & L</div>
       </div>
     </div>
   </section>
