--- a/subeTuEvento.html
+++ b/subeTuEvento.html
@@ -43,7 +43,8 @@
   <!--Landing Page-->
   <link rel="stylesheet" href="css/agora-subeTuEvento.css"/>
 </head>
-<body id="inicio">
+<body id="inicio"></body>
+<div class="contenedor">
   <!--SECCIÓN INICIO -->
   <section class="inicio flexBox__Row" id="inicio">
     <div class="inicio__informacion">
@@ -62,13 +63,13 @@
     </div>
   </section>
   <!--SECCIÓN ENVÍA-->
-  <section class="comunica flexBox__Row" id="comunica">
-    <div class="comunica__info moduloIzq"> 
+  <section class="sube flexBox__Row" id="sube">
+    <div class="sube__info moduloIzq"> 
       <h2 class="nombre__seccion">Envía</h2>
       <p class="informacion__seccion">Destaca la información importante y exhibe la imagen gráfica para atraer mas usuarios.</p>
       <p class="informacion__seccion">Envía todos tus eventos que estén próximos a suceder.</p>
     </div>
-    <div class="comunica__imagen moduloDer"></div>
+    <div class="sube__imagen moduloDer"></div>
   </section>
   <!--SECCIÓN TIEMPOS-->
   <section class="tiempos flexBox__Row" id="tiempos">
@@ -83,4 +84,4 @@
   <section class="pie pie--subirTuEvento">
     <div class="pie__logo">ágora</div>
   </section>
-</body>
+</div>
