SubeTuEvento--se modifico la sección de formas  utitlizando el layout de Grid y se agrego el background-imagen del inicio

--- a/subeTuEvento.html
+++ b/subeTuEvento.html
@@ -42,8 +42,10 @@
   <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
   <!--Landing Page-->
   <link rel="stylesheet" href="css/agora-subeTuEvento.css"/>
+  <!--Agora Media Queris-->
+  <link rel="stylesheet" href="css/grid_subetuevento.css"/>
 </head>
-<body id="inicio"></body>
+<body></body>
 <div class="contenedor">
   <!--SECCIÓN INICIO -->
   <section class="inicio flexBox__Row" id="inicio">
@@ -55,11 +57,23 @@
     </div>
   </section>
   <!--SECCIÓN FORMAS-->
-  <section class="formas flexBox__Row" id="formas">
-    <div class="formas__imagen moduloIzq"></div>
-    <div class="formas__info moduloDer">
-      <h2 class="nombre__seccion">Descubre</h2>
-      <p class="informacion__seccion">ágora te muestra las actividades culturales y de entretenimiento a realizarse, dejando atrás la forma aburrida de buscar entre carteleras con eventos atrasados.</p>
+  <section class="formas" id="formas">
+    <div class="formas__mediosDeComunicacion">
+      <div class="correoWeb medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/luna.png"/>
+        <h5 class="nombre__medio">Correo Web</h5>
+        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
+        <button class="boton__medio">MOSTRAR</button>
+      </div>
+      <div class="facebook medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/luna.png"/>
+        <h5 class="nombre__medio">Facebook</h5>
+        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
+        <button class="boton__medio">MOSTRAR</button>
+      </div>
+      <div class="formulario medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/luna.png"/>
+        <h5 class="nombre__medio">Formulario</h5>
+        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
+        <button class="boton__medio">MOSTRAR</button>
+      </div>
     </div>
   </section>
   <!--SECCIÓN ENVÍA-->
