Modal--se modificaron las secciones y se agrego el icon para cada forma | LandingPage--se agregaron los mounstros como maqueta para cada integrante

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -166,7 +166,9 @@
     <h2><span class="weight100">ágora </span><span class="weight300">team</span></h2>
     <div class="equipo__tarjetas">
       <div class="jose equipo__perfil">
-        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <div class="equipo__marcoImagen">
+          <div class="equipo__imagen perfil--jose"></div>
+        </div>
         <h3 class="nombre__integrante"><span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
         <p class="descripcion__integrante">Reseña</p>
         <div class="tags__integrante">
@@ -175,7 +177,9 @@
         </div>
       </div>
       <div class="ingrid equipo__perfil">
-        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <div class="equipo__marcoImagen">
+          <div class="equipo__imagen perfil--ingrid"></div>
+        </div>
         <h3 class="nombre__integrante"> <span class="weight400">Ingrid </span><span class="weight100">Rguez</span></h3>
         <p class="descripcion__integrante">Reseña</p>
         <div class="tags__integrante">
@@ -184,7 +188,9 @@
         </div>
       </div>
       <div class="kalollero equipo__perfil">
-        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <div class="equipo__marcoImagen">
+          <div class="equipo__imagen perfil--kalollero"></div>
+        </div>
         <h3 class="nombre__integrante"> <span class="weight400">Kalóllero </span><span class="weight100">Marro.on</span></h3>
         <p class="descripcion__integrante">Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.</p>
         <div class="tags__integrante">
