--- a/subeTuEvento.html
+++ b/subeTuEvento.html
@@ -42,8 +42,6 @@
   <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
   <!--Landing Page-->
   <link rel="stylesheet" href="css/agora-subeTuEvento.css"/>
-  <!--Agora Media Queris-->
-  <link rel="stylesheet" href="css/grid_subetuevento.css"/>
 </head>
 <body></body>
 <div class="contenedor">
@@ -52,38 +50,39 @@
     <div class="inicio__informacion">
       <h1 class="inicio--titulo">
         	Comunica <span class="weight300">tu </span>Evento.</h1>
-      <p class="inicio--texto weight300"><strong>crea </strong>el espacio para el evento que organizas y has que <strong>todos lo vean.</strong></p>
       <div class="linea"></div>
-    </div>
-  </section>
-  <!--SECCIÓN FORMAS-->
-  <section class="formas" id="formas">
-    <div class="formas__mediosDeComunicacion">
-      <div class="correoWeb medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/luna.png"/>
-        <h5 class="nombre__medio">Correo Web</h5>
-        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
-        <button class="boton__medio">MOSTRAR</button>
-      </div>
-      <div class="facebook medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/luna.png"/>
-        <h5 class="nombre__medio">Facebook</h5>
-        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
-        <button class="boton__medio">MOSTRAR</button>
-      </div>
-      <div class="formulario medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/luna.png"/>
-        <h5 class="nombre__medio">Formulario</h5>
-        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
-        <button class="boton__medio">MOSTRAR</button>
-      </div>
+      <p class="inicio--texto"><strong>crea </strong>el espacio para el evento que organizas y has que <strong>todos lo vean.</strong></p>
     </div>
   </section>
   <!--SECCIÓN ENVÍA-->
   <section class="sube flexBox__Row" id="sube">
     <div class="sube__info moduloIzq"> 
       <h2 class="nombre__seccion">Envía</h2>
-      <p class="informacion__seccion">Destaca la información importante y exhibe la imagen gráfica para atraer mas usuarios.</p>
-      <p class="informacion__seccion">Envía todos tus eventos que estén próximos a suceder.</p>
+      <p class="informacion__seccion">Destaca la información importante de forma detallada</p>
+      <p class="informacion__seccion">Envía todos tus eventos que estén próximos a suceder</p>
     </div>
     <div class="sube__imagen moduloDer"></div>
+  </section>
+  <!--SECCIÓN FORMAS-->
+  <section class="formas" id="formas">
+    <p>Diseñamos tres formas para subir tu evento y así puedas elegir la que más te acomoda</p>
+    <div class="formas__mediosDeComunicacion">
+      <div class="correoWeb medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/correo.svg"/>
+        <h5 class="nombre__medio">Correo Web</h5>
+        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
+        <button class="boton__medio">MOSTRAR</button>
+      </div>
+      <div class="facebook medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/facebook.svg"/>
+        <h5 class="nombre__medio">Facebook</h5>
+        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
+        <button class="boton__medio">MOSTRAR</button>
+      </div>
+      <div class="formulario medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/formulario.svg"/>
+        <h5 class="nombre__medio">Formulario</h5>
+        <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
+        <button class="boton__medio">MOSTRAR</button>
+      </div>
+    </div>
   </section>
   <!--SECCIÓN TIEMPOS-->
   <section class="tiempos flexBox__Row" id="tiempos">
