SubeTuEvento & LandingPage--se agrego al imagen maqueta

--- a/subeTuEvento.html
+++ b/subeTuEvento.html
@@ -61,23 +61,26 @@
       <p class="informacion__seccion">Destaca la información importante de forma detallada</p>
       <p class="informacion__seccion">Envía todos tus eventos que estén próximos a suceder</p>
     </div>
-    <div class="sube__imagen moduloDer"></div>
+    <div class="sube__imagen moduloDer"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
   </section>
   <!--SECCIÓN FORMAS-->
   <section class="formas" id="formas">
     <p>Diseñamos tres formas para subir tu evento y así puedas elegir la que más te acomoda</p>
     <div class="formas__mediosDeComunicacion">
-      <div class="correoWeb medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/correo.svg"/>
+      <div class="correoWeb medioDeComunicacion">
+        <div class="imagen__medio"><img class="imagen-fluida" src="images/correo.svg"/></div>
         <h5 class="nombre__medio">Correo Web</h5>
         <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
         <button class="boton__medio">MOSTRAR</button>
       </div>
-      <div class="facebook medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/facebook.svg"/>
+      <div class="facebook medioDeComunicacion">
+        <div class="imagen__medio"><img class="imagen-fluida" src="images/facebook.svg"/></div>
         <h5 class="nombre__medio">Facebook</h5>
         <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
         <button class="boton__medio">MOSTRAR</button>
       </div>
-      <div class="formulario medioDeComunicacion"><img class="imagen-fluida imagen__medio" src="images/formulario.svg"/>
+      <div class="formulario medioDeComunicacion">
+        <div class="imagen__medio"><img class="imagen-fluida" src="images/formulario.svg"/></div>
         <h5 class="nombre__medio">Formulario</h5>
         <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
         <button class="boton__medio">MOSTRAR</button>
@@ -86,7 +89,7 @@
   </section>
   <!--SECCIÓN TIEMPOS-->
   <section class="tiempos flexBox__Row" id="tiempos">
-    <div class="tiempos__imagen moduloIzq"></div>
+    <div class="tiempos__imagen moduloIzq"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
     <div class="tiempos__info moduloDer">
       <h2 class="nombre__seccion"> </h2>
       <p class="informacion__seccion">Los Eventos se aprueban y muestran en la plataforma en un plazo de 24 horas.</p>
