--- a/agora_landing.html
+++ b/agora_landing.html
@@ -72,7 +72,7 @@
   </nav>
   <!--SECCIÓN INICIO -->
   <section class="inicio flexBox__Row" id="inicio">
-    <div class="inicio__imagen moduloIzq"></div>
+    <div class="inicio__imagen moduloIzq"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
     <div class="inicio__informacion moduloDer">
       <h1 class="inicio--titulo">Descubre.</h1>
       <h1 class="inicio--titulo">
@@ -100,11 +100,11 @@
       <h2 class="nombre__seccion">Descubre</h2>
       <p class="informacion__seccion">ágora te muestra las actividades culturales y de entretenimiento a realizarse, dejando atrás la forma aburrida de buscar entre carteleras con eventos atrasados.</p>
     </div>
-    <div class="descubre__imagen moduloDer"></div>
+    <div class="descubre__imagen moduloDer"><img class="imagen-fluida" src="images/descubre.png"/></div>
   </section>
   <!--SECCIÓN EXPLORA-->
   <section class="explora flexBox__Row" id="explora">
-    <div class="explora__imagen moduloIzq"></div>
+    <div class="explora__imagen moduloIzq"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
     <div class="explora__info moduloDer">
       <h2 class="nombre__seccion">
          Explora<sup><i class="icon-info"></i></sup></h2>
@@ -129,11 +129,11 @@
       <h2 class="nombre__seccion">Comunica</h2>
       <p class="informacion__seccion">Diseñamos el espacio estupendo para tú evento, enfocando ágora para ofrecerte una plataforma especializada en difundir tu evento, en la cual podrás conectar con tus próximos asistentes.</p>
     </div>
-    <div class="comunica__imagen moduloDer"></div>
+    <div class="comunica__imagen moduloDer"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
   </section>
   <!--SECCIÓN CREA-->
   <section class="crea flexBox__Row" id="crea">
-    <div class="crea__imagen moduloIzq"></div>
+    <div class="crea__imagen moduloIzq"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
     <div class="crea__info moduloDer">
       <h2 class="nombre__seccion">
          Crea<sup><i class="icon-info"></i></sup></h2>
@@ -147,12 +147,12 @@
     <div class="moduloIzq">
       <h2 class="nombre__seccion"><span class="small">a un click de tus</span><strong> boletos</strong></h2>
       <p class="informacion__seccion">Dirige a tus usuarios hacia la plataforma que utilizas, y en donde ellos podran adquirir los accesos de tu evento.</p>
-      <p class="informacion__seccion">Al crear el espacio de tu evento, ágora te permite ingresar el link que te proproporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.</p>
+      <p class="informacion__seccion">Al crear el espacio de tu evento, ágora te permite ingresar el link que te proporporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.</p>
     </div>
-    <div class="moduloDer"></div>
+    <div class="moduloDer"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
   </section>
   <section class="boletos flexBox__Row" id="boletos">
-    <div class="moduloIzq"> </div>
+    <div class="moduloIzq"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
     <div class="moduloDer">
       <p class="informacion__seccion">La plataforma te permite también indicarle a tus usuarios si  el acceso a tu evento no tiene un precio</p>
     </div>
@@ -163,11 +163,11 @@
   </section>
   <!--SECCIÓN Equipo-->
   <section class="equipo flexBox__Column" id="equipo">
-    <h2><span class="weight100">ágora </span><span class="weight300">team</span></h2>
+    <h2><span class="weight100">Equipo </span><span class="weight400"> ágora </span></h2>
     <div class="equipo__tarjetas">
       <div class="jose equipo__perfil">
         <div class="equipo__marcoImagen">
-          <div class="equipo__imagen perfil--jose"></div>
+          <div class="equipo__imagen perfil--jose"><img class="imagen-fluida" src="images/desarrollador.jpg"/></div>
         </div>
         <h3 class="nombre__integrante"><span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
         <p class="descripcion__integrante">Reseña</p>
@@ -178,7 +178,7 @@
       </div>
       <div class="ingrid equipo__perfil">
         <div class="equipo__marcoImagen">
-          <div class="equipo__imagen perfil--ingrid"></div>
+          <div class="equipo__imagen perfil--ingrid"><img class="imagen-fluida" src="images/ingrid.jpg"/></div>
         </div>
         <h3 class="nombre__integrante"> <span class="weight400">Ingrid </span><span class="weight100">Rguez</span></h3>
         <p class="descripcion__integrante">Reseña</p>
@@ -189,7 +189,7 @@
       </div>
       <div class="kalollero equipo__perfil">
         <div class="equipo__marcoImagen">
-          <div class="equipo__imagen perfil--kalollero"></div>
+          <div class="equipo__imagen perfil--kalollero"><img class="imagen-fluida" src="images/kalollero.jpg"/></div>
         </div>
         <h3 class="nombre__integrante"> <span class="weight400">Kalóllero </span><span class="weight100">Marro.on</span></h3>
         <p class="descripcion__integrante">Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.</p>
