Menu---inicio de creación

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -149,10 +149,10 @@
       <p class="informacion__seccion">Dirige a tus usuarios hacia la plataforma que utilizas, y en donde ellos podran adquirir los accesos de tu evento.</p>
       <p class="informacion__seccion">Al crear el espacio de tu evento, ágora te permite ingresar el link que te proporporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.</p>
     </div>
-    <div class="moduloDer"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
+    <div class="moduloDer"><img class="imagen-fluida" src="images/boletos_01.svg"/></div>
   </section>
   <section class="boletos flexBox__Row" id="boletos">
-    <div class="moduloIzq"><img class="imagen-fluida" src="images/maqueta_de_dibujo.svg"/></div>
+    <div class="moduloIzq"><img class="imagen-fluida" src="images/boletos_02.svg"/></div>
     <div class="moduloDer">
       <p class="informacion__seccion">La plataforma te permite también indicarle a tus usuarios si  el acceso a tu evento no tiene un precio</p>
     </div>
