--- a/index.html
+++ b/index.html
@@ -60,18 +60,16 @@
   </nav>
   <nav class="menuNavegacionApaisado">
     <div><i class="icon-a"></i></div>
+    <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div>
   </nav>
-  <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div>
-  <div class="menuOverlay" id="menuOverlay"> 
-    <nav class="menuOverlay--"> 
-      <ul>
-        <li><a type="button" href="">Buscar</a></li>
-        <li><a type="button" href="">Filtro</a></li>
-        <li><a type="button" href="">Biblioteca</a></li>
-        <li><a type="button" href="agora_LandingPage.html">Fase Alfa</a></li>
-      </ul>
-    </nav>
-  </div>
+  <nav class="menuOverlay">
+    <ul>
+      <li><a type="button" href="">Buscar</a></li>
+      <li><a type="button" href="">Filtro</a></li>
+      <li><a type="button" href="">Biblioteca</a></li>
+      <li><a type="button" href="agora_LandingPage.html">Fase Alfa</a></li>
+    </ul>
+  </nav>
   <!--Modal -->
   <div class="modalTarjetas displayNone" id="modal">
     <button class="cerrar" id="close__modal"><i class="icon-cerrar"></i></button>
@@ -159,11 +157,12 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/jquery-3.2.1.slim.min.js"></script>
   <script type="text/javascript">
     $('#botonMenu').click(function(){
     	$(this).toggleClass('active');
-    	$('#menuOverlay').toggleClass('open');
-    	$('body').toggleClass('modal-active');
+    	//- $('#menuOverlay').toggleClass('open');
+    	//- $('body').toggleClass('modal-active');
     });
     
     $('#banner__enviaTuEvento').click(function(){
