--- a/modal.html
+++ b/modal.html
@@ -38,7 +38,6 @@
   <link href="css/normalize.css" rel="stylesheet"/>
   <!--Style modal-->
   <link rel="stylesheet" href="css/agora-modal.css"/>
-  <!--Agora Media Queris-->
 </head>
 <body>
   <div class="contenedor__modal">
@@ -56,11 +55,7 @@
       <div class="organizador__modal"><img class="organizadorEventoImgPerfil__modal" src="images/luna.png"/>
         <p class="organizadorEventoNombre__modal">Instituto Veracruzano de Cultura | IVEC</p>
       </div>
-      <div class="redesSociales__modal"><a class="tooltip-top" href="" data-tooltip="Tooltip Facebook"><i class="icon-facebook icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Twitter"><i class="icon-twitter icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Instagram"><i class="icon-instagram icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Teléfono"><i class="icon-telefono icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Dirección"><i class="icon-direccion icono-modal"></i></a></div>
-    </div>
-    <div class="menu__imagenes">
-      <div class="compartir"><i class="icon-compartir"></i></div>
-      <div><i class="anterior icon-anterior"></i><i class="siguiente icon-siguiente"></i></div>
+      <div class="redesSociales__modal"><a class="tooltip-top" href=""><i class="icon-facebook icono-modal"></i></a><a class="tooltip-top" href=""><i class="icon-twitter icono-modal"></i></a><a class="tooltip-top" href=""><i class="icon-instagram icono-modal"></i></a><a class="tooltip-top" href=""><i class="icon-telefono icono-modal"></i></a><a class="tooltip-top" href=""><i class="icon-direccion icono-modal"></i></a></div>
     </div>
   </div>
 </body>
