--- a/subeTuEvento.html
+++ b/subeTuEvento.html
@@ -68,7 +68,7 @@
     <p>Diseñamos tres formas para subir tu evento y así puedas elegir la que más te acomoda</p>
     <div class="formas__mediosDeComunicacion">
       <div class="correoWeb medioDeComunicacion">
-        <div class="imagen__medio"><img class="imagen-fluida" src="images/correo.svg"/></div>
+        <div class="imagen__medio"><img class="imagen-fluida" src="images/correo-subetuevento.svg"/></div>
         <h5 class="nombre__medio">Correo Web</h5>
         <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
         <button class="boton__medio">MOSTRAR</button>
@@ -80,7 +80,7 @@
         <button class="boton__medio">MOSTRAR</button>
       </div>
       <div class="formulario medioDeComunicacion">
-        <div class="imagen__medio"><img class="imagen-fluida" src="images/formulario.svg"/></div>
+        <div class="imagen__medio"><img class="imagen-fluida" src="images/formulario-subetuevento.svg"/></div>
         <h5 class="nombre__medio">Formulario</h5>
         <p class="descripcion__medio">Descripción de el medio para enviar la información de tu o tus eventos</p>
         <button class="boton__medio">MOSTRAR</button>
